--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,61 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* Mi solución propuesta */
+
+.header {
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding: 16px;
+}
+
+body{
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  
+}
+.sidebar{
+  flex-shrink: 0;
+  padding: 16px;
+}
+.right{
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+}
+.card{
+  padding: 16px;
+  margin: 16px;
+  width: 300px;
+}
+
+.footer p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}
